# 73r-

./: .gitignore  README.md  pyproject.toml
src/: Makefile  build.sh  reset.sh  run.sh  termOS.py
src/components/: terminal.py
src/core/: collector.py  dir.py  disk.py  dotfile.py  ds.py  file.py  folder.py  memory_buffer.py  shell.py  system.py
src/core/io/: collector.py  display.py
src/data/: termOS.state
src/engine/: system.py
src/engine/core/: __init__.py  disk.py  dotfile.py  file.py  folder.py  memory_buffer.py
src/engine/fs/: file_system.py
src/engine/interfaces/: command.py  structs.py
src/engine/io/: __init__.py  collector.py  display.py  ioController.py  io_controller.py
src/engine/sh/commands/: __init__.py  addr.py  cat.py  commands.py  edit.py  fetch.py  find.py  jmp.py  ll.py  ls.py  mv.py  rm.py  tp.py  tree.py
src/engine/shell/: shell.py
src/engine/shell/commands/: __init__.py  addr.py  cat.py  commands.py  edit.py  fetch.py  find.py  jmp.py  ll.py  ls.py  mv.py  rm.py  tree.py
src/qt/: game.py
src/qt/ui/: theme.py
src/system/: system.py
src/system/core/: __init__.py  disk.py  file.py  folder.py
src/system/core/interfaces/: command.py
src/system/fs/: file_system.py
src/system/io/: __init__.py  collector.py  display.py  io_controller.py
src/system/meta/: ascii.py
src/system/sdk/: __init__.py
src/system/sh/: shell.py
src/system/sh/commands/: __init__.py  addr.py  cat.py  clock.py  commands.py  cp.py  del_.py  edit.py  fetch.py  find.py  jmp.py  ll.py  (+8 more)
src/utils/: encrypting.py
storyboard/: Script.md  ideas.md
