[tool.poetry]
name = "73r-"
version = "0.1.0"
description = "Terminal based game"
authors = ["OrbitalJin, Mumei00"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.5, <3.12"
rich = "^13.5.2"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
